fix:chooseAvailableTime